fixed daily leaderboard being cut off slightly

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -667,7 +667,7 @@
       }
 
       &.dailyLeaderboard {
-        max-width: 10rem;
+        max-width: 13rem;
         overflow: hidden;
         white-space: nowrap;
       }
